alignment & formatting fixes

--- a/src/assets/scss/_tooltip.scss
+++ b/src/assets/scss/_tooltip.scss
@@ -110,7 +110,7 @@
 }
 
 .v-popover {
-    display: block !important;
+    display: block;
     position: absolute;
     top: $spacer--s;
     right: 0;
